--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <!-- HEADER -->
     <header>
         <div class="header-inner container">
-            <a href="#" class="logo">Bakery</a>
+            <a href="#" class="logo">
+                <img src="./assets/cake-img/lgoo.png" alt="" style="width: 250px;">
+            </a>
             <div class="mobile-toggle">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);">
                     <path d="M4 6h16v2H4zm4 5h12v2H8zm5 5h7v2h-7z"></path>
@@ -41,10 +43,10 @@
                     <div class="swiper-slide">
                         <div class="hero__slide">
                             <div class="hero__slide__txt">
-                                Cheese
+                                <img src="./assets/cake-img/lgoo.png" alt="" style="max-width: 800px; height: 185px;">
                             </div>
                             <div class="hero__slide__img">
-                                <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
+                                <img src="./assets/cake-img/Ảnh bên trái phần bìa .png" alt="">
                                 <button class="btn btn-right stye" data-speed="-5" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">$4.5</button>
                                 <button class="btn btn-left" data-speed="-5" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">Thêm vào giỏ hàng</button>
                             </div>
@@ -55,10 +57,10 @@
                     <div class="swiper-slide">
                         <div class="hero__slide">
                             <div class="hero__slide__txt">
-                                Blueberry
+                                <img src="./assets/cake-img/lgoo.png" alt="" style="max-width: 800px; height: 185px;">
                             </div>
                             <div class="hero__slide__img">
-                                <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
+                                <img src="./assets/cake-img/gau.png" alt="">
                                 <button class="btn btn-right" data-speed="-5" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">$4.5</button>
                                 <button class="btn btn-left" data-speed="-5" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">Thêm vào giỏ hàng</button>
                             </div>
@@ -69,38 +71,10 @@
                     <div class="swiper-slide">
                         <div class="hero__slide">
                             <div class="hero__slide__txt">
-                                Chocolate
+                                <img src="./assets/cake-img/lgoo.png" alt="" style="max-width: 800px; height: 185px;">
                             </div>
                             <div class="hero__slide__img">
-                                <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
-                                <button class="btn btn-right" data-speed="-5" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">$4.5</button>
-                                <button class="btn btn-left" data-speed="-5" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">Thêm vào giỏ hàng</button>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- end slide -->
-                    <!-- slide -->
-                    <div class="swiper-slide">
-                        <div class="hero__slide">
-                            <div class="hero__slide__txt">
-                                Strawberry
-                            </div>
-                            <div class="hero__slide__img">
-                                <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
-                                <button class="btn btn-right" data-speed="-5" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">$4.5</button>
-                                <button class="btn btn-left" data-speed="-5" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">Thêm vào giỏ hàng</button>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- end slide -->
-                    <!-- slide -->
-                    <div class="swiper-slide">
-                        <div class="hero__slide">
-                            <div class="hero__slide__txt">
-                                Chocolate
-                            </div>
-                            <div class="hero__slide__img">
-                                <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
+                                <img src="./assets/cake-img/Ảnh bên phải phần bìa.png" alt="">
                                 <button class="btn btn-right" data-speed="-5" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">$4.5</button>
                                 <button class="btn btn-left" data-speed="-5" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">Thêm vào giỏ hàng</button>
                             </div>
@@ -125,97 +99,97 @@
                     <!-- single product -->
                     <div class="product-card">
                         <div class="product-card__img">
-                            <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
+                            <img src="./assets/cake-img/sukum puff 55k.png" alt="">
                             <div class="btn-wraper">
                                 <button class="btn btn-small" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">Add to bag</button>
                             </div>
                         </div>
                         <div class="product-card__price">$5.65</div>
-                        <div class="product-card__name">Blueberry cake</div>
+                        <div class="product-card__name">Sukum puff</div>
                     </div>
                     <!-- end single product -->
                     <!-- single product -->
                     <div class="product-card">
                         <div class="product-card__img">
-                            <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
+                            <img src="./assets/cake-img/tiramisu không bị cắt.png" alt="">
                             <div class="btn-wraper">
                                 <button class="btn btn-small" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">Add to bag</button>
                             </div>
                         </div>
                         <div class="product-card__price">$5.65</div>
-                        <div class="product-card__name">Strawberry cake</div>
+                        <div class="product-card__name">Tiramisu</div>
                     </div>
                     <!-- end single product -->
                     <!-- single product -->
                     <div class="product-card">
                         <div class="product-card__img">
-                            <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
+                            <img src="./assets/cake-img/Bánh Gato Đại ngàn.png" alt="">
                             <div class="btn-wraper">
                                 <button class="btn btn-small" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">Add to bag</button>
                             </div>
                         </div>
                         <div class="product-card__price">$5.65</div>
-                        <div class="product-card__name">Chocolate cake</div>
+                        <div class="product-card__name">Gato Đại ngàn</div>
                     </div>
                     <!-- end single product -->
                     <!-- single product -->
                     <div class="product-card">
                         <div class="product-card__img">
-                            <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
+                            <img src="./assets/cake-img/Bánh Gato Chanh leo.png" alt="">
                             <div class="btn-wraper">
                                 <button class="btn btn-small" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">Add to bag</button>
                             </div>
                         </div>
                         <div class="product-card__price">$5.65</div>
-                        <div class="product-card__name">Caramel cake</div>
+                        <div class="product-card__name">Gato Chanh leo</div>
                     </div>
                     <!-- end single product -->
                     <!-- single product -->
                     <div class="product-card">
                         <div class="product-card__img">
-                            <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
+                            <img src="./assets/cake-img/Bánh gato Caramen Pháp.jpeg" alt="">
                             <div class="btn-wraper">
                                 <button class="btn btn-small" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">Add to bag</button>
                             </div>
                         </div>
                         <div class="product-card__price">$5.65</div>
-                        <div class="product-card__name">Cheese cake</div>
+                        <div class="product-card__name">Gato Caramen Pháp</div>
                     </div>
                     <!-- end single product -->
                     <!-- single product -->
                     <div class="product-card">
                         <div class="product-card__img">
-                            <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
+                            <img src="./assets/cake-img/Bánh Gato hoa quả.jpeg" alt="">
                             <div class="btn-wraper">
                                 <button class="btn btn-small" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">Add to bag</button>
                             </div>
                         </div>
                         <div class="product-card__price">$5.65</div>
-                        <div class="product-card__name">Chocolateake</div>
+                        <div class="product-card__name">Gato hoa quả</div>
                     </div>
                     <!-- end single product -->
                     <!-- single product -->
                     <div class="product-card">
                         <div class="product-card__img">
-                            <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
+                            <img src="./assets/cake-img/Bánh Gato Matcha.png" alt="">
                             <div class="btn-wraper">
                                 <button class="btn btn-small" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">Add to bag</button>
                             </div>
                         </div>
                         <div class="product-card__price">$5.65</div>
-                        <div class="product-card__name">Milk cake</div>
+                        <div class="product-card__name">Gato Matcha</div>
                     </div>
                     <!-- end single product -->
                     <!-- single product -->
                     <div class="product-card">
                         <div class="product-card__img">
-                            <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
+                            <img src="./assets/cake-img/gau.png" alt="">
                             <div class="btn-wraper">
                                 <button class="btn btn-small" style="background-color: #c8beed; box-shadow: 0px 4px 23px 6px #7d81c7">Add to bag</button>
                             </div>
                         </div>
                         <div class="product-card__price">$5.65</div>
-                        <div class="product-card__name">Chocolate cake</div>
+                        <div class="product-card__name">Gato Gấu</div>
                     </div>
                     <!-- end single product -->
                 </div>
@@ -229,11 +203,13 @@
         <div class="container">
             <div class="about">
                 <div class="about__img">
-                    <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
+                    <img src="./assets/Ảnh chúng tôi là (cho to lên tí nhé).jpeg" alt="" style="width: 800px;">
                 </div>
                 <div class="about__info">
                     <div class="section__header">Chúng tôi là ai</div>
-                    <h2 class="about__info__title">Tran Anh <span class="txt-main">Bakery</span></h2>
+                    <h2 class="about__info__title">
+                        <img src="./assets/cake-img/lgoo.png" alt="" style="width: 350px;">
+                    </h2>
                     <p class="about__info__description">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
                     </p>
@@ -251,7 +227,7 @@
         <div class="container">
             <div class="footer">
                 <div class="footer__img">
-                    <img src="https://quantri.longbien.edu.vn/UploadFolderNew/SGDLongBien/Image/mnthuongthanh/admin/vang.jpg" alt="">
+                    <img src="./assets/Ảnh cuối .jpeg" alt="" height="600px" width="800px">
                 </div>
                 <div class="footer__menus">
                     <ul class="footer__menus__col">
@@ -273,7 +249,7 @@
                         <li><a href="#">Bánh quy</a></li>
                     </ul>
                     <div class="company" style="color: #702791;">The Elegance of Good Taste</div>
-                    <img src="./assets/cupcake (5).png" alt="">
+                    <!-- <img src="./assets/cupcake (5).png" alt=""> -->
                 </div>
             </div>
         </div>
